feat: 优化 WebSocket 与媒体文件访问安全，增加 OnlyOffice JWT 验证与头像缓存，修复测试问题